--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flask flask-sqlalchemy flask-login
+        pip install flask flask-sqlalchemy flask-login requests
 
     - name: Start backend server
       shell: bash
@@ -35,14 +35,11 @@ jobs:
           sleep 5
         fi
         # サーバーが起動しているか確認
-        curl http://localhost:1234 || (cat server.log && exit 1)
+        python -c "import requests, sys; try: response = requests.get('http://localhost:1234'); sys.exit(0 if response.status_code == 200 else 1); except Exception as e: print(f'Error: {e}'); [print(line) for line in open('server.log').readlines()]; sys.exit(1)"
 
     - name: Create test user
-      shell: bash
       run: |
-        curl -X POST http://localhost:1234/register \
-          -H "Content-Type: application/json" \
-          -d '{"username":"sasao","password":"ts05140952"}'
+        python -c "import requests, sys; response = requests.post('http://localhost:1234/register', headers={'Content-Type': 'application/json'}, json={'username': 'sasao', 'password': 'ts05140952'}); sys.exit(0 if response.status_code == 201 else print(f'Failed to create user: {response.text}') or 1)"
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
