--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flask flask-sqlalchemy flask-login requests
+        pip install -r requirements.txt
 
     - name: Start backend server
       shell: bash
