🔧 fix: GitHub Actionsのパーミッションとアーティファクト設定を改善
- パーミッションを追加（pull-requests, issues, packages, pages）
- アーティファクトのパスを絶対パスに変更
- アーティファクトの保持期間を30日に設定
- テスト結果の名前を明確化

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,6 +10,10 @@ permissions:
   contents: read
   actions: write
   checks: write
+  pull-requests: write
+  issues: write
+  packages: write
+  pages: write
 
 jobs:
   test:
@@ -83,12 +87,13 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v3
       with:
-        name: playwright-report
+        name: test-results
         path: |
-          playwright-report/
-          test-results/
-          test-screenshots/
-          server.log
+          ${{ github.workspace }}/playwright-report/
+          ${{ github.workspace }}/test-results/
+          ${{ github.workspace }}/test-screenshots/
+          ${{ github.workspace }}/server.log
+        retention-days: 30
 
     - name: Stop backend server
       if: always()
