⚡️ perf: Playwrightテスト実行の設定を最適化
- CI環境変数の設定を追加
- ブラウザパスの設定を追加
- テスト実行のパラメータを調整
  - シングルワーカーモード
  - リトライ回数を2回に設定
- ブラウザ情報の表示を追加
- デバッグログの範囲を拡大

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -96,13 +96,18 @@ jobs:
         ls -R
 
     - name: Run Playwright tests
+      env:
+        CI: 'true'
+        PLAYWRIGHT_BROWSERS_PATH: '0'
       run: |
         echo "Running Playwright tests..."
         echo "Current directory: $(pwd)"
         echo "Directory contents:"
         ls -la
+        echo "Browser information:"
+        npx playwright install chromium --dry-run
         echo "Starting tests with debug logging..."
-        DEBUG=pw:api npx playwright test --reporter=list
+        DEBUG=pw:api,pw:browser* npx playwright test --reporter=list --workers=1 --retries=2
 
     - name: Prepare test results
       if: always()
