--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MSプロジェクトE2Eテストサンプル",
   "scripts": {
     "test": "playwright test",
-    "test:ui": "playwright test --ui"
+    "test:ui": "playwright test --ui",
+    "postinstall": "playwright install chromium --with-deps"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
