♻️ refactor: Playwrightのインストール手順を詳細化
- インストール手順を個別のステップに分割
  - npm依存関係のインストール
  - Playwrightの最新バージョンをインストール
  - ブラウザのインストール
- インストール検証ステップを追加
  - バージョン情報の表示
  - バイナリの場所確認
- ログ出力を改善

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -130,13 +130,24 @@ jobs:
 
     - name: Install dependencies
       run: |
+        echo "Installing npm dependencies..."
         npm ci || npm install
+        
+    - name: Install Playwright
+      run: |
+        echo "Installing Playwright..."
+        npm install -D @playwright/test@latest playwright@latest
         
     - name: Install Playwright browsers
       run: |
         echo "Installing Playwright browsers..."
-        PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 npm install
-        npx playwright install chromium --with-deps
+        PLAYWRIGHT_BROWSERS_PATH=0 npx playwright install chromium --with-deps
+        
+    - name: Verify Playwright installation
+      run: |
+        echo "Verifying Playwright installation..."
+        npx playwright --version
+        which playwright || true
 
     - name: Environment check
       run: |
