--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -112,30 +112,18 @@ jobs:
           sleep 2
         done
 
-    - name: Set up Node.js
+    - name: Setup Node.js and Playwright
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        check-latest: true
+        cache: 'npm'
 
-    - name: Cache Node.js modules
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.npm
-          node_modules
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-
-    - name: Install dependencies
+    - name: Install dependencies and Playwright
       run: |
-        echo "Installing npm dependencies..."
+        echo "Installing dependencies..."
         npm ci || npm install
-
-    - uses: microsoft/playwright-github-action@v1
-      with:
-        browsers: chromium
+        echo "Installing Playwright..."
+        npx playwright install chromium --with-deps
 
     - name: Environment check
       run: |
