♻️ refactor: テスト実行時のサーバー管理を改善
- テスト実行前のサーバー状態確認を追加
- デバッグ設定を環境変数に移動
- タイムアウトを120秒に延長
- 設定ファイルを明示的に指定
- エラー時のログ出力を改善
- 不要なコマンドを削除

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -158,23 +158,29 @@ jobs:
         PLAYWRIGHT_JUNIT_OUTPUT_NAME: 'test-results/junit.xml'
         PLAYWRIGHT_HTML_REPORT: 'playwright-report'
         PLAYWRIGHT_SCREENSHOT_ON_FAILURE: '1'
+        DEBUG: 'pw:api,pw:browser*,pw:protocol'
       run: |
         echo "Running Playwright tests..."
         echo "Current directory: $(pwd)"
         echo "Directory contents:"
         ls -la
-        echo "Browser information:"
-        npx playwright install chromium --dry-run
-        echo "Network check:"
-        curl -v http://localhost:1234 || true
+        
+        echo "Verifying server status..."
+        if ! curl -s http://localhost:1234 > /dev/null; then
+          echo "Server is not responding. Checking logs:"
+          cat logs/server.log
+          exit 1
+        fi
+        
         echo "Starting tests with debug logging..."
-        DEBUG=pw:api,pw:browser*,pw:protocol npx playwright test \
+        npx playwright test \
           --reporter=list,html,junit \
           --workers=1 \
           --retries=2 \
-          --timeout=60000 \
+          --timeout=120000 \
           --max-failures=5 \
-          --trace on
+          --trace on \
+          --config=playwright.config.js
 
     - name: Prepare test results
       if: always()
