--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -129,10 +129,15 @@ jobs:
         node-version: '20'
         cache: 'npm'
 
-    - name: Install dependencies and Playwright
+    - name: Install dependencies
       run: |
-        echo "Installing dependencies..."
+        echo "Installing system dependencies..."
+        sudo apt-get update
+        sudo apt-get install -y xvfb
+        
+        echo "Installing npm dependencies..."
         npm ci || npm install
+        
         echo "Installing Playwright..."
         npx playwright install chromium --with-deps
 
