--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -136,10 +136,12 @@ jobs:
         sudo apt-get install -y xvfb
         
         echo "Installing npm dependencies..."
-        npm ci || npm install
+        npm ci
         
-        echo "Installing Playwright..."
-        npx playwright install chromium --with-deps
+    - name: Install Playwright Browsers
+      run: |
+        echo "Installing Playwright and browsers..."
+        npx playwright install --with-deps
 
     - name: Environment check
       run: |
@@ -159,7 +161,6 @@ jobs:
     - name: Run Playwright tests
       env:
         CI: 'true'
-        PLAYWRIGHT_BROWSERS_PATH: '0'
         PLAYWRIGHT_JUNIT_OUTPUT_NAME: 'test-results/junit.xml'
         PLAYWRIGHT_HTML_REPORT: 'playwright-report'
         PLAYWRIGHT_SCREENSHOT_ON_FAILURE: '1'
