--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -133,7 +133,7 @@ jobs:
       run: |
         echo "Installing system dependencies..."
         sudo apt-get update
-        sudo apt-get install -y xvfb
+        sudo apt-get install -y xvfb libglib2.0-0 libnss3 libnspr4 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libdbus-1-3 libxcb1 libxkbcommon0 libx11-6 libxcomposite1 libxdamage1 libxext6 libxfixes3 libxrandr2 libgbm1 libpango-1.0-0 libcairo2 libasound2 libatspi2.0-0
         
         echo "Installing npm dependencies..."
         npm ci
@@ -141,7 +141,8 @@ jobs:
     - name: Install Playwright Browsers
       run: |
         echo "Installing Playwright and browsers..."
-        npx playwright install --with-deps
+        PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 npm install
+        npx playwright install chromium
 
     - name: Environment check
       run: |
@@ -166,6 +167,7 @@ jobs:
         PLAYWRIGHT_SCREENSHOT_ON_FAILURE: '1'
         DEBUG: 'pw:api,pw:browser*,pw:protocol'
         NODE_ENV: 'test'
+        DISPLAY: ':99'
       run: |
         echo "Running Playwright tests..."
         echo "Verifying server status..."
