--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -139,7 +139,23 @@ jobs:
       run: |
         echo "Installing system dependencies..."
         sudo apt-get update
-        sudo apt-get install -y xvfb libglib2.0-0 libnss3 libnspr4 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libdbus-1-3 libxcb1 libxkbcommon0 libx11-6 libxcomposite1 libxdamage1 libxext6 libxfixes3 libxrandr2 libgbm1 libpango-1.0-0 libcairo2 libasound2 libatspi2.0-0
+        sudo apt-get install -y xvfb
+        
+        echo "Installing browser dependencies..."
+        sudo apt-get install -y --no-install-recommends \
+          libgtk-3-0 \
+          libasound2 \
+          libx11-xcb1 \
+          libxcomposite1 \
+          libxcursor1 \
+          libxdamage1 \
+          libxfixes3 \
+          libxi6 \
+          libxrandr2 \
+          libxrender1 \
+          libxss1 \
+          libxtst6 \
+          libgbm1
         
         echo "Installing npm dependencies..."
         npm ci
