🔧 fix: システム依存関係のインストール方法を修正
- libasound2をlibasound2t64に変更
- X11関連パッケージを追加
  - x11-xkb-utils
  - xauth
  - x11-apps
- パッケージの重複を削除

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -162,7 +162,10 @@ jobs:
           libgbm1 \
           libnss3 \
           libxss1 \
-          libasound2
+          libasound2t64 \
+          x11-xkb-utils \
+          xauth \
+          x11-apps
         
         echo "Installing npm dependencies..."
         npm ci
